--- a/exe/FeatureExtraction/package.xml
+++ b/exe/FeatureExtraction/package.xml
@@ -11,4 +11,8 @@
 	<run_depend>roscpp</run_depend>
 	<run_depend>rospy</run_depend>
 	<run_depend>std_msgs</run_depend>
+	<build_depend>openface_msgs</build_depend>
+	<run_depend>openface_msgs</run_depend>
+	<build_depend>message_generation</build_depend>
+	<run_depend>message_runtime</run_depend>
 </package>
